# cms-claims-demo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPLIANCE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: data_dictionary.md  erd.md
docs/superpowers/plans/: 2026-05-29-framework-scaffold.md  2026-05-31-synthea-pivot.md  2026-05-31-wp8-notebook.md  2026-05-31-wp9-architecture.md
docs/superpowers/specs/: 2026-05-29-framework-design.md
notebooks/: story.ipynb
sql/analytics/: care_gap_detection.sql  cohort_segmentation.sql  cost_benchmarking.sql  readmission_30day.sql  utilization_trends.sql
sql/schema/: ddl.sql
src/cms_platform/analytics/: queries.py
src/cms_platform/api/: deps.py  main.py  models.py
src/cms_platform/api/routes/: benchmarks.py  beneficiary.py  cohorts.py  patient.py
src/cms_platform/common/: audit.py  config.py  db.py  logging.py  mask.py
src/cms_platform/ingest/: download.py  load.py
src/cms_platform/schema/: transforms.py
src/cms_platform/scoring/: explainer.py  risk_model.py
tests/: conftest.py  test_analytics.py  test_api.py  test_ci.py  test_common.py  test_compliance.py  test_ingest.py  test_schema.py  test_scoring.py  test_stubs.py
