[project]
name = "cms-claims-platform"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.2",
    "polars>=1.0",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
    "openai>=1.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.0",
    "httpx>=0.27",
]

[project.scripts]
cms-ingest = "cms_platform.ingest.download:main"
cms-load   = "cms_platform.ingest.load:main"
cms-serve  = "cms_platform.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
